# fast-wave

./: .gitignore  LICENSE  MANIFEST.in  NOTICE.txt  PsiFock_Ctable_github.ipynb  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: bandit.yml  codeql.yml  pylint.yml
benchmarks/MATLAB_Comparison/: MATLAB_Wavefunction_Precision_Tests.mlx  MATLAB_Wavefunction_Speed_Tests.mlx  wavefunction_MATLAB_3.m
benchmarks/MATLAB_Comparison - fixed precision/: MATLAB_Wavefunction_Precision_Tests.mlx  MATLAB_Wavefunction_Precision_Tests_Cython.mlx  MATLAB_Wavefunction_Precision_Tests_Numba.mlx  MATLAB_Wavefunction_Speed_Tests_Cython.mlx  MATLAB_Wavefunction_Speed_Tests_Numba.mlx  README.md  wavefunction_MATLAB_4.m
benchmarks/Wolfram_Mathematica_Comparison - fixed precision/: Wolfram_Mathematica_Wavefunction_Precision_Tests.nb  Wolfram_Mathematica_Wavefunction_Precision_Tests_Cython.nb  Wolfram_Mathematica_Wavefunction_Precision_Tests_Numba.nb  Wolfram_Mathematica_Wavefunction_Speed_Tests.nb  Wolfram_Mathematica_Wavefunction_Speed_Tests_Cython.nb  Wolfram_Mathematica_Wavefunction_Speed_Tests_Numba.nb
coefficient_matrix_wavefunction/: wavefunction.py
docs/: CNAME  fast_wave.html  index.html  search.js
efficient_wavefunction/: C_matrix.pickle  wavefunction.py
examples/: precision_tests_mpmath.ipynb  speed_tests_numba_and_cython.ipynb
fast_wave/: wavefunction.py
tests/: test_wavefunction.py  test_wavefunction_arb_prec.py  test_wavefunction_cython.py  test_wavefunction_mpmath.py  test_wavefunction_numba.py
(+24 files in other folders)
