[metadata]
name = fast_wave
version = 1.6.2
description = Package for the calculation of the time-independent wavefunction.
author = Matheus Gomes Cordeiro
author_email = matheusgomescord@gmail.com
url = https://github.com/pikachu123deimos/fast-wave

[options]
package_dir = src
packages = find_packages

[install_requires]
llvmlite==0.42.0
mpmath==1.3.0
numba==0.59.1
numpy==1.26.4
sympy==1.12
cython==3.0.10

[test_requires]
pytest = ^7.1.2
